# bdtk_wrapper

./: .gitmodules  CMakeLists.txt  README.md  gen_lib.sh
demo/: CMakeLists.txt  TpchQ6DummyTask.cpp  TpchQ6DummyTask.h  TpchQ6Task.h  demo.cpp  glog_demo.cpp  q6_demo.cpp
