
set(
  CIDER_VELOX_LIB
  velox_plugin
  cider_plan_transformer
  velox_substrait_convertor
  velox_substrait_plan_converter
  velox_duckdb_parser
  velox_exec_test_lib
  velox_plan_transformer
  velox_arrow_bridge
  velox_vector_test_lib
  velox_hive_connector
  velox_functions_prestosql
  velox_dwio_common_test_utils
  cider
  cider_function
  cider_processor
  cider_plan_substrait
  nextgen
  jitlib
  cider_plan_parser
  cider_type_plan
  cider_func_lkup
  velox_parse_parser
  substrait_function
  substrait_type
  substrait_common
  yaml-cpp
  cider_util
  QueryEngine
  LLVM
  yaml-cpp
  protobuf
  tbb)

add_executable(demo demo.cpp)

target_link_libraries(
  demo
  velox_core
  velox_vector
  velox_exec
  velox_time
  velox_type
  velox_type_tz
  velox_serialization
  velox_encode
  velox_dwio_common_exception
  velox_functions_lib
  velox_hive_partition_function
  velox_aggregates
  velox_hive_connector
  velox_tpch_connector
  velox_presto_serializer
  velox_dwio_dwrf_reader
  ${THRIFT_LIBRARY}
  ${RE2}
  ${FOLLY_WITH_DEPENDENCIES}
  ${ANTLR4_RUNTIME}
  ${GLOG}
  ${GFLAGS_LIBRARIES}
  pthread
  ${CIDER_VELOX_LIB}
  gtest
  )

